# tt-vllm-plugin

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: bge_large_en_v1_5.py  llama_3_1_8b_instruct.py
tt_vllm_plugin/: __init__.py  platform.py
tt_vllm_plugin/model_loader/: tt_loader.py
tt_vllm_plugin/tests/: test_offline_inference.py
tt_vllm_plugin/v1/: ascend_scheduler.py
tt_vllm_plugin/v1/worker/: tt_model_runner.py  tt_model_runner_pooling.py  tt_worker.py
tt_vllm_plugin/worker/: tt_worker.py
